# BLG-456E

./: README.md
Aid_Box/: model.config  model.sdf
Aid_Box_N/: model.config  model.sdf
Hook/: model.config  model.sdf
Hook_01/: model.config  model.sdf
Hook_03/: model.config  model.sdf
hook_sdf/: model.config  model.sdf
hook_urdf/: model.urdf
ifohector_and_sensors/: README.md
ifohector_and_sensors/src/hector_models/hector_sensors_description/urdf/: max_sonar_ez4.urdf.xacro  omnivision_ov7670.urdf.xacro
ifohector_and_sensors/src/hector_quadrotor/hector_quadrotor_demo/launch/: indoor_slam_gazebo.launch  outdoor_flight_gazebo.launch
ifohector_and_sensors/src/hector_quadrotor/hector_quadrotor_demo/rviz_cfg/: indoor_slam.rviz  outdoor_flight.rviz
ifohector_and_sensors/src/hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_ifo.gazebo.xacro
movement2/src/: answer.py  answer2.py  i_like_to_move_it.py
path planning/: global_planner.cpp  global_planner.h
wind_simulation/: CMakeLists.txt  README.md  package.xml
wind_simulation/src/: wind_simulation.py
